--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,10 @@ Web:
   Cors: "*" # 跨域访问
   Debug: false # 是否开启debug模式
   Log: false # 是否开启日志
+  ShowIP: true #是否显示IP
 Redis:
   Address: redis:6379 # redis地址
-  Password:
+  Password: 
   Database: 0
   TLS: false      # 是否使用TLS连接redis
   Prefix: bsz     # redis前缀
