--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ Redis:
 Bsz:
   Expire: 0        # 统计数据过期时间 单位秒, 请输入整数 (无任何访问, 超过这个时间后, 统计数据将被清空, 0为不过期)
   Secret: "bsz"    # JWT签名密钥 // 请设置为任意长度的随机值
-  #Encrypt: "MD516" # 加密算法 (MD516 / MD532) 老版本请使用 MD532
+  Encrypt: "" # 加密算法 (MD516 / MD532/空) 
   PathStyle: true  # 路径样式 (false: url&path, true: path) 老版本请使用 false,  true 更便于数据迁移
 
 
