--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push
+name: Docker Build 和 Push
 
 on:
   push:
@@ -25,11 +25,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build 和 push Docker image
       uses: docker/build-push-action@v3
       with:
         context: .
         file: Dockerfile  # 如果 Dockerfile 在项目根目录，保持此行；如果在其他地方，可以修改路径
+        platforms: linux/amd64,linux/arm64
         push: true  # 推送到 Docker Hub
         tags: ${{ secrets.DOCKER_USERNAME }}/busuanzi:latest  # 镜像名称和标签
 
